--- a/docs/users.yaml
+++ b/docs/users.yaml
@@ -47,6 +47,14 @@ paths:
                 type: string
               password: 
                 type: string
+              email_notification: 
+                type: boolean
+              sms_notification: 
+                type: boolean
+              email: 
+                type: string
+              phone_number: 
+                type: string
       responses:
         201:
           description: User created.
